# seiyuu-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
backend/bot/: __init__.py  config.py  main.py  manage.py
backend/bot/admin/: __init__.py  routes.py  schemas.py
backend/bot/admin/static/: admin.css  admin.js  index.html
backend/bot/monitor/: __init__.py  image_watcher.py
backend/bot/plugins/: __init__.py
backend/bot/plugins/mention_command/: __init__.py  handlers.py  models.py  services.py
backend/bot/plugins/voice_actor/: __init__.py  handlers.py  models.py  services.py  utils.py
database/: init.sql  seed.sql
docs/: API.md  DATABASE.md
scripts/: manage_aliases.py
